--- a/public/assets/less/style.less
+++ b/public/assets/less/style.less
@@ -12,6 +12,12 @@ a.label{ color:#fff; cursor:pointer; }
 
 /*---template---*/
 #header{ margin-bottom:40px; }
+#header{ 
+	.navbar{ margin:0; }
+	.navbar-main{ margin:0; border-color:@navbar-default-border; }
+	.navbar + .navbar{ border-top:0 none; }
+	.navbar-collapse{ padding:0; }
+}
 #subheader{
 	.page-title{ font-size:20px; line-height:32px; font-weight:bold; margin-top:0; }
 }
