Add product section

--- a/public/assets/less/style.less
+++ b/public/assets/less/style.less
@@ -45,3 +45,4 @@ a.label{ color:#fff; cursor:pointer; }
 .form-horizontal .control-label{ text-align:left; }
 .btn-default{ background-color:#e7e7e7; }
 .radio label + label{ margin-left:20px; }
+.input-group-btn .btn{ height:34px; }
